<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/businessNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Business Number"
        android:inputType="number" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/t_PrimaryBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Primary Business"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/primaryBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/pBusiness_array"
        android:prompt="@string/pBusiness_prompt" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Address"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/t_ProvincerTerritory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Province/Territory"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/provinceTerritory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/province_array"
        android:prompt="@string/province_prompt" />

    <Button
        android:id="@+id/submitInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="submitInfoButton"/>

</LinearLayout>
